this latest file

--- a/Task1/task6.html
+++ b/Task1/task6.html
@@ -7,7 +7,7 @@
 </head>
 <body >
 	<div class="center">
-
+<!--hello-->
 
 <label>ProductId</label>        <input class="input"  type="text" id="pid"><br/>
 <label>ProductPrice</label>     <input class="inputp"  type="text" id="price"><br/>
@@ -19,9 +19,5 @@
 
 <br>
 </div>
-
-
-
-
 </body>
 </html>
